--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,git,jekyll,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,git,jekyll,visualstudiocode
 
+### Claude Code ###
+
+# Ignore Claude Code config files
+.claude/
+# Ignore Claude Code instructions file
+CLAUDE.md
+
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
