--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,23 +2,26 @@
 # Hooks to use in this repository
 repos:
   ########################################
+  # Javascript Beautifiers
+  ########################################
+  - repo: https://github.com/standard/standard
+    rev: v17.1.2
+    hooks:
+      - id: standard
+
+  ########################################
   # Linters to validate beautifiers output
   ########################################
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-      - id: check-ast
       - id: check-case-conflict
-      - id: check-docstring-first
       - id: check-illegal-windows-names
       - id: check-merge-conflict
-      - id: check-toml
       - id: check-yaml
       - id: end-of-file-fixer
       - id: fix-byte-order-marker
-      - id: name-tests-test
-        args: [--pytest-test-first]
       - id: no-commit-to-branch
-        args: [--branch, main]
+        args: [--branch, main, --branch, master]
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
