--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,8 +2,12 @@
 # Hooks to use in this repository
 repos:
   ########################################
-  # Javascript Beautifiers
+  # Javascript Beautifiers and Linters
   ########################################
+  - repo: https://github.com/biomejs/pre-commit
+    rev: v0.6.1
+    hooks:
+      - id: biome-check
   - repo: https://github.com/standard/standard
     rev: v17.1.2
     hooks:
